# omni

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
omni/: __init__.py  _validation.py  colors.py  common.py  load.py  ml.py  parallel.py  psql.py  sqlite.py
omni/sql/: base.py  psql.py  sqlite.py
tests/: test_omni.py  test_parallel.py
