[tool.poetry]
name = "omni"
version = "0.1.0"
description = ""
authors = ["James Morrill <james.morrill.6@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
numpy = "^1.21.2"
psycopg2 = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
